--- a/InternalLibrary.Forms/InternalLibrary.Forms/Views/BookListView.xaml
+++ b/InternalLibrary.Forms/InternalLibrary.Forms/Views/BookListView.xaml
@@ -3,10 +3,18 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:vm="clr-namespace:InternalLibrary.Forms.ViewModels"
+    xmlns:views="clr-namespace:InternalLibrary.Forms.Views"
     x:Class="InternalLibrary.Forms.Views.BookListView"
     x:DataType="vm:BookListViewModel"
     Title="{Binding Title}">
     <ContentPage.Content>
-        <Label Text="Text"/>
+        <ListView ItemsSource="{Binding BookList}"
+                  HasUnevenRows="True">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <views:BookViewCell/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </ContentPage.Content>
 </ContentPage>
