--- a/InternalLibrary.Forms/InternalLibrary.Forms/Views/BookListView.xaml
+++ b/InternalLibrary.Forms/InternalLibrary.Forms/Views/BookListView.xaml
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage
+﻿<ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:vm="clr-namespace:InternalLibrary.Forms.ViewModels"
@@ -9,6 +8,7 @@
     Title="{Binding Title}">
     <ContentPage.Content>
         <ListView ItemsSource="{Binding BookList}"
+                  SelectedItem="{Binding SelectedBook}"
                   HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
