--- a/InternalLibrary.Forms/InternalLibrary.Forms/Views/SignUpView.xaml
+++ b/InternalLibrary.Forms/InternalLibrary.Forms/Views/SignUpView.xaml
@@ -1,4 +1,4 @@
-﻿<views:ViewBase
+﻿<views:ContentViewBase
     xmlns:views="clr-namespace:InternalLibrary.Forms.Views"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -31,4 +31,4 @@
         </StackLayout>
 
     </ContentPage.Content>
-</views:ViewBase>
+</views:ContentViewBase>
